--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Hawaii</title>
 
 		<link rel="stylesheet" href="styles.css">
-		<link rel="stylesheet" href="repstyle.css" media="screen and (min-width: 380px)">
+		
 	</head>
 <body>
 	<div class="container">
@@ -20,15 +20,15 @@
 		<div class="top">
 			<h3>Wonderfull Scenery</h3>
 			<!--  column 1  -->
-			<section class="col1">
+			<section class=".col-md-4">
 				<img src="nighttime_hawaii.jpg" alt="skyline hawaii" width="300">
 				<p>The night time scenery is just as beautiful as the day time</p>
 			</section>
-			<section class="col2">
+			<section class=".col-md-4">
 				<img src="hawaiian_palms.jpg" alt="palm trees" width="300">
 				<p>Beautiful Island scenery thoughout all the islands</p>
 			</section>
-			<section class="col3">
+			<section class=".col-md-4">
 				<img src="higgins.jpg" alt="Higgins from Magnum PI" width="300">
 				<p>Higgins says he loves it here in Hawaii. Come for a visit and he may let you shoot the cannon!</p>
 			</section>
