--- a/purchase.html
+++ b/purchase.html
@@ -23,20 +23,36 @@
 
     </div>
   </nav>
-  <div class="container center">
+  <div class="container">
     <h1>Hello, world!</h1>
-<form>
-  <div class="form-group">
-    <label for="exampleInputEmail1">Name</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="First Name">
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Last Name">
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  <button type="submit" class="col-md-2 btn btn-default">Submit</button>
-</form>
+
+
+    <form>
+      <div class="form-group">
+        <label for="InputName">Name</label>
+        <input type="text" class="form-control" id="InputFirstName" placeholder="First Name" required>
+        <input type="text" class="form-control" id="InputLastName" placeholder="Last Name" required>
+      </div>
+      <div class="form-group">
+        <label for="InputContactInfo">Contact Information</label>
+        <input type="email" class="form-control" id="InputEmail" placeholder="Email">
+        <input type="tel" class="form-control" id="InputPhone" placeholder="Primary Phone" />
+      </div>
+      <div class="form-group">
+        <label for="InputPeople">Travellers</label>
+        <h3>How many people</h3>
+        <select class="form-control">
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+        </select>
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
+
+
   </div>
 
 
