--- a/index.html
+++ b/index.html
@@ -17,11 +17,55 @@
 </head>
 
 <body>
+
 	<div class="container">
 		<header>
 			<h1>Hawaiian Vacation</h1>
 			<a href="index.html"> Home </a> | <a href="purchase.html"> Purchase Info </a>
 		</header>
+<!-- adding the carousel -->
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="catamaran.jpg" alt="Hawaiin Beach" width="500" height="600">
+      <div class="carousel-caption">
+        ...
+      </div>  <!-- end of carousel-caption  -->
+    </div>  <!-- end of item active  -->
+    <div class="item">
+      <img src="sunset2.jpg" alt="Nighttime Hawaii">
+      <div class="carousel-caption">
+        ...
+      </div> <!-- end of carousel-caption  -->
+    </div>  <!-- end of item  -->
+		<div class="item">
+      <img src="dheaddusk.jpg" alt="Resort in Hawaii">
+      <div class="carousel-caption">
+        ...
+      </div> <!-- end of carousel-caption  -->
+    </div>  <!-- end of item  -->
+    ...
+  </div>  <!-- end of item carousel-inner  -->
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
 		<div class="top">
 			<h3>Wonderfull Scenery</h3>
 			<!--  column 1  -->
