--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="catamaran.jpg" alt="Hawaiin Beach" width="500" height="600">
+      <img src="Honolulu01.jpg" alt="Diamond Head and sailboat" >
       <div class="carousel-caption">
         ...
       </div>  <!-- end of carousel-caption  -->
     </div>  <!-- end of item active  -->
     <div class="item">
-      <img src="sunset2.jpg" alt="Nighttime Hawaii">
+      <img src="pearl900500.jpg" alt="Nighttime Luau">
       <div class="carousel-caption">
         ...
       </div> <!-- end of carousel-caption  -->
     </div>  <!-- end of item  -->
 		<div class="item">
-      <img src="dheaddusk.jpg" alt="Resort in Hawaii">
+      <img src="dhead.jpg" alt="Resort in Hawaii">
       <div class="carousel-caption">
         ...
       </div> <!-- end of carousel-caption  -->
