updated css background and index

--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="Honolulu01.jpg" alt="Diamond Head and sailboat" >
+      <img src="Honolulu01.jpg" alt="Honolulu and Diamond Head" >
       <div class="carousel-caption">
         ...
       </div>  <!-- end of carousel-caption  -->
     </div>  <!-- end of item active  -->
     <div class="item">
-      <img src="pearl900500.jpg" alt="Nighttime Luau">
+      <img src="pearl900500.jpg" alt="Pearl Harbor Monument">
       <div class="carousel-caption">
         ...
       </div> <!-- end of carousel-caption  -->
     </div>  <!-- end of item  -->
 		<div class="item">
-      <img src="dhead.jpg" alt="Resort in Hawaii">
+      <img src="dhead.jpg" alt="Beaches and DiamondHead">
       <div class="carousel-caption">
         ...
       </div> <!-- end of carousel-caption  -->
@@ -70,13 +70,14 @@
 			<h3>Wonderfull Scenery</h3>
 			<!--  column 1  -->
 			<section class="col-md-4">
-				<img src="nighttime_hawaii.jpg" alt="skyline hawaii" width="300">
-				<p>The night time scenery is just as beautiful as the day time</p>
-			</section>
-			<section class="col-md-4">
 				<img src="hawaiian_palms.jpg" alt="palm trees" width="300">
 				<p>Beautiful Island scenery thoughout all the islands</p>
 			</section>
+			<section class="col-md-4">
+				<img src="sunset2.jpg" alt="skyline hawaii" width="300">
+				<p>The night time scenery is just as beautiful as the day time</p>
+			</section>
+
 			<section class="col-md-4">
 								<img src="higgins.jpg" alt="Higgins from Magnum PI" width="300">
 				<p>Higgins says he loves it here in Hawaii. Come for a visit and he may let you shoot the cannon!</p>
@@ -109,7 +110,7 @@
 			<!-- end of bottom -->
 		</div>
 		<!-- end of clearfix -->
-		<footer style="font-style: italic">Copyright &copy; James Horton 04/2018</footer>
+		<footer style="font-style: italic">Copyright &copy; James Horton / Colton Slayden   04/2018</footer>
 	</div>
 	<!-- end of container -->
 
