--- a/index.html
+++ b/index.html
@@ -20,8 +20,17 @@
 
 	<div class="container">
 		<header>
+			<nav class="navbar navbar-default navbar-static-top">
+		    <div class="container">
+		      <ul class="nav navbar-nav">
+		        <li class="active"><a href="index.html">Home</a></li>
+		        <li ><a href="purchase.html">Purchase Info</a></li>
+		      </ul>
+
+		    </div>
+		  </nav>
 			<h1>Hawaiian Vacation</h1>
-			<a href="index.html"> Home </a> | <a href="purchase.html"> Purchase Info </a>
+	<!--		<a href="index.html"> Home </a> | <a href="purchase.html"> Purchase Info </a>  -->
 		</header>
 <!-- adding the carousel -->
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -33,26 +42,26 @@
   </ol>
 
   <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
+  <div class="carousel-inner" role="listbox" style="text-align: center;">
     <div class="item active">
       <img src="Honolulu01.jpg" alt="Honolulu and Diamond Head" >
       <div class="carousel-caption">
-        ...
+        Nighttime Honolulu and DiamondHead
       </div>  <!-- end of carousel-caption  -->
     </div>  <!-- end of item active  -->
     <div class="item">
-      <img src="pearl900500.jpg" alt="Pearl Harbor Monument">
+      <img src="USSArizona.jpg" alt="USS Arizona Memorial">
       <div class="carousel-caption">
-        ...
+        Visit the USS Arizona Memorial
       </div> <!-- end of carousel-caption  -->
     </div>  <!-- end of item  -->
 		<div class="item">
-      <img src="dhead.jpg" alt="Beaches and DiamondHead">
+      <img src="img1.jpg" alt="Hawaii Landscape">
       <div class="carousel-caption">
-        ...
+        Beautiful roadway scenery
       </div> <!-- end of carousel-caption  -->
     </div>  <!-- end of item  -->
-    ...
+    				Come visit us in alluring Hawaii!! We are waiting to share our islands with you!
   </div>  <!-- end of item carousel-inner  -->
 
   <!-- Controls -->
