--- a/purchase.html
+++ b/purchase.html
@@ -14,17 +14,20 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-default navbar-static-top">
-    <div class="container">
-      <ul class="nav navbar-nav">
-        <li><a href="index.html">Home</a></li>
-        <li class="active"><a href="purchase.html">Purchase Info</a></li>
-      </ul>
-
-    </div>
-  </nav>
   <div class="container">
-    <h1>Hello, world!</h1>
+    <header style="margin-bottom: 15px;">
+      <nav class="navbar navbar-default navbar-static-top">
+        <div class="container">
+          <ul class="nav navbar-nav">
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="purchase.html">Purchase Info</a></li>
+          </ul>
+
+        </div>
+      </nav>
+
+      <h1>Purchase Information Form</h1>
+    </header>
 
 
     <form>
@@ -40,8 +43,8 @@
       </div>
       <div class="form-group">
         <label for="InputPeople">Travellers</label>
-        <h3>How many people</h3>
         <select class="form-control">
+            <option>Select Travellers</option>
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -49,7 +52,24 @@
             <option>5</option>
         </select>
       </div>
-      <button type="submit" class="btn btn-default">Submit</button>
+      <div class="form-group">
+        <label for="InputPackageTeir">Travel Package</label>
+        <div class="radio">
+
+          <label>
+      <input type="radio" name="optionsRadios" id="standardPackage" value="option1" checked>
+      Standard Package &mdash;$500 per traveller
+    </label>
+        </div>
+        <div class="radio">
+          <label>
+      <input type="radio" name="optionsRadios" id="premiumPackage" value="option2">
+      Premium Package &mdash;$1500 per traveller
+    </label>
+        </div>
+      </div>
+
+      <button style="margin-bottom: 15px" type="submit" class="center-block btn btn-default">Submit</button>
     </form>
 
 
