--- a/purchase.html
+++ b/purchase.html
@@ -44,7 +44,7 @@
       <div class="form-group">
         <label for="InputPeople">Travellers</label>
         <select class="form-control">
-            <option>Select Travellers</option>
+            <option disabled>Select Travellers</option>
             <option>1</option>
             <option>2</option>
             <option>3</option>
