updated responsivenss and commented css

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		        <li ><a href="purchase.html">Purchase Info</a></li>
 		      </ul>
 
-		    </div>
-		  </nav>
+		    </div> <!-- end of container for nav  -->
+		  </nav> <!-- end of nav bar  -->
 			<h1>Hawaiian Vacation</h1>
 	<!--		<a href="index.html"> Home </a> | <a href="purchase.html"> Purchase Info </a>  -->
 		</header>
@@ -75,19 +75,19 @@
   </a>
 </div>
 
-		<div class="top">
+		<div class="row">
 			<h3>Wonderfull Scenery</h3>
 			<!--  column 1  -->
-			<section class="col-md-4">
+			<section class="col-lg-4 col-md-6 col-sm-6">
 				<img src="hawaiian_palms.jpg" alt="palm trees" width="300">
 				<p>Beautiful Island scenery thoughout all the islands</p>
 			</section>
-			<section class="col-md-4">
+			<section class="col-lg-4 col-md-6 col-sm-6">
 				<img src="sunset2.jpg" alt="skyline hawaii" width="300">
 				<p>The night time scenery is just as beautiful as the day time</p>
 			</section>
 
-			<section class="col-md-4">
+			<section class="col-md-4 hidden-xs hidden-sm hidden-md">
 								<img src="higgins.jpg" alt="Higgins from Magnum PI" width="300">
 				<p>Higgins says he loves it here in Hawaii. Come for a visit and he may let you shoot the cannon!</p>
 			</section>
@@ -95,24 +95,24 @@
 		<!-- end of top -->
 
 		<div class="cols clearfix">
-			<div class="middle">
+			<div class="row">
 				<h3>Great shows were filmed here</h3>
-				<section class="col-md-4">
+				<section class="col-lg-4 col-md-6 col-sm-6">
 					<img src="h503.jpg" alt="hawaii 5-0 pic" width="300">
 					<p>Both the original and the reboot had the distinction of being filmed here. How many locations from them can you find?</p>
 				</section>
-				<section class="col-md-4">
+				<section class="col-lg-4 col-md-6 col-sm-6">
 					<img src="mpi.jpg" alt="magnum pi pic" width="300">
-					<p>I know I would like ot find Robin's car and go for a drive? Wouldn't you</p>
+					<p>I know I would like to find Robin's car and go for a drive, wouldn't you?</p>
 				</section>
-				<section class="col-md-4">
+				<section class="col-lg-4 hidden-xs hidden-sm hidden-md">
 					<img src="stitch_elvis.jpg" alt="stitch as elvis" width="300">
 					<p>Stitch!! Need we really say anymore?</p>
 				</section>
 			</div>
 			<!-- end of middle -->
 
-			<div class="bottom">
+			<div class="bottom hidden-xs">
 				<h3>Other Attractions</h3>
 				<p>The are many other attraction to the Hawaiian Islands. Pearl Harbor, Diamond Head, various volcano's and state parks. And too many museums to name.</p>
 			</div>
